# Vacuum-Forming-Sim

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  README.md  cmake_install.cmake  zipup.sh
CGL/: Makefile  cmake_install.cmake
CGL/include/CGL/: matrix3x3.h  matrix4x4.h  quaternion.h
CGL/src/: Makefile  cmake_install.cmake  matrix3x3.cpp  matrix4x4.cpp
builders/: primrefgen.cpp.avx.cpp
bvh/: bvh.cpp.avx.cpp  bvh_builder.cpp.avx.cpp  bvh_builder_hair.cpp.avx2.cpp  bvh_builder_hair_mb.cpp.avx.cpp  bvh_builder_morton.cpp.avx2.cpp  bvh_builder_sah.cpp.avx2.cpp  bvh_builder_sah_mb.cpp.avx2.cpp  bvh_builder_sah_spatial.cpp.avx.cpp  bvh_builder_subdiv.cpp.avx2.cpp  bvh_builder_twolevel.cpp.avx.cpp  bvh_collider.cpp.avx2.cpp  bvh_intersector1_bvh4.cpp.avx.cpp  bvh_intersector1_bvh8.cpp.avx.cpp  bvh_intersector_hybrid4_bvh4.cpp.sse42.cpp  bvh_intersector_hybrid4_bvh8.cpp.avx2.cpp  bvh_intersector_hybrid8_bvh4.cpp.avx2.cpp  bvh_intersector_hybrid8_bvh8.cpp.avx.cpp  bvh_intersector_stream_bvh4.cpp.sse42.cpp  bvh_intersector_stream_bvh8.cpp.avx2.cpp  bvh_intersector_stream_filters.cpp.avx2.cpp  bvh_refit.cpp.avx.cpp  bvh_rotate.cpp.avx.cpp  bvh_statistics.cpp.avx.cpp
common/: scene_curves.cpp.avx2.cpp  scene_grid_mesh.cpp.avx.cpp  scene_instance.cpp.avx.cpp  scene_line_segments.cpp.avx.cpp  scene_points.cpp.avx2.cpp  scene_quad_mesh.cpp.avx.cpp  scene_subdiv_mesh.cpp.sse42.cpp  scene_triangle_mesh.cpp.avx.cpp  scene_user_geometry.cpp.avx2.cpp
docs/: index.md  milestone.md  proposal.md
ext/CGL/include/CGL/: matrix3x3.h  vector2D.h  vector3D.h  vector4D.h
ext/nanogui/: Makefile  cmake_install.cmake
ext/nanogui/ext_build/glfw/: Makefile  cmake_install.cmake
ext/nanogui/ext_build/glfw/src/: Makefile  cmake_install.cmake  glfw3ConfigVersion.cmake  libglfw.so.3.2
ext/proj1/src/: drawrend.cpp  drawrend.h  main.cpp  svg.cpp  svgparser.cpp  texture.cpp  texture.h  transforms.cpp
geometry/: curve_intersector_virtual.cpp.avx2.cpp  grid_soa.cpp.avx.cpp  instance_intersector.cpp.sse42.cpp  primitive8.cpp.avx.cpp
meshes/: Body1.stl  knee_decimated.off  wood_plate.stl
scene/: cloth.mtl  cloth.off  cone.json  face_sheild.json  head_back.json  head_front.json  knee.json  knee_decimated.json  knee_old.json  knee_reduced.json  mesh.json  miki_head.json  miki_head_v2.json  pin_edges.json  pinned4.json  result.off  result2.off  smallPlane.json  sphere.json  sphere_mesh.json  test_mesh_velocities.json  velocity.json
shaders/: camera.vert  image.frag  object.frag
src/: CMakeLists.txt  Makefile  cloth.cpp  cloth.h  clothMesh.cpp  clothMesh.h  clothSimulator.cpp  clothSimulator.h  cmake_install.cmake  main.cpp  png.h  pointMass.h  shaderUtils.h  spring.h
src/collision/: collisionObject.h  mesh.cpp  mesh.h  plane.cpp  plane.h  sphere.cpp  sphere.h
src/misc/: mesh_drawing.cpp  mesh_drawing.h  mesh_import.cpp  mesh_import.h  sphere_drawing.cpp
storage/: CMakeLists.txt  README  Untitled-4.dxf  arap.cpp  circle_undistorted_solo.ai  circles_Distorted.dwg  circles_Undistorted.dwg  circles_distorted.ai  circles_distorted.dxf  circles_distorted_solo.ai  circles_undistorted_fusion.dxf
subdiv/: subdivpatch1base_eval.cpp.avx2.cpp
